--- a/login.html
+++ b/login.html
@@ -39,6 +39,8 @@
         <div class="logreg-box">
             <!------ login form ------->
             <div class="form-box login">
+                <a href="./index.html" class="back-btn-login"><i class='bx bx-arrow-back'></i></a>
+
                 <form action="#">
                     <h2>Sign In</h2>
 
@@ -70,6 +72,8 @@
             <!-------- registration form --------->
             <div class="form-box register">
                 <form action="#">
+                    <a href="./index.html" class="back-btn-register"><i class='bx bx-arrow-back'></i></a>
+
                     <h2>Sign Up</h2>
 
                     <div class="input-box">
