--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-primary">Login</a>
+      <a href="login.html" class="btn btn-primary">Login</a>
       <!-- <a href="#" class="btn btn-primary">Sign Up</a> -->
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
