firebase.js added

--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
 
             <!-------- registration form --------->
             <div class="form-box register">
-                <form action="#" onsubmit="signup(event)">
+                <form action="#" onsubmit="signup">
                     <a href="./index.html" class="back-btn-register"><i class='bx bx-arrow-back'></i></a>
 
                     <h2>Sign Up</h2>
@@ -107,60 +107,18 @@
             </div>
         </div>
     </div>
-
-    <!----------- firebase script for login page ----------->
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyA96RtouYomgFfcOnO-r30xSdHOWm1uYaE",
-            authDomain: "asperia-2453d.firebaseapp.com",
-            projectId: "asperia-2453d",
-            storageBucket: "asperia-2453d.appspot.com",
-            messagingSenderId: "1040391468706",
-            appId: "1:1040391468706:web:a56ed4d30a0b12542c09fb"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth()
-
-        //Getting All the Objects of htmls
-        var username = document.getElementById("username")
-        var email = document.getElementById("email")
-        var password = document.getElementById("password")
-
-
-        //making a function for storing data
-        export function signup(e){
-            e.preventDefault();
-            var obj = {
-                username: username.value,
-                email: email.value,
-                password: password.value,
-            }
-            createUserWithEmailAndPassword(auth, obj.email, obj.passwords)
-                .then(function (success) {
-                    alert("Signup Successfully")
-                })
-                .catch(function (err) {
-                    alert("error" + err)
-                });
-            console.log(obj);
-        };
-
-
-
-
-
-
+    
+    <script>
+        function signup(){
+            console.log("hello");
+        }
 
     </script>
+    <script src="./firebase.js" type="module"></script>
+    <script src="./login.js"></script>
+</body>
+
+</html>
 
 
 
@@ -232,11 +190,7 @@
     //     })
     // </script> -->
 
-    <!-------- javascript file ---------->
-    <script src="./login.js"></script>
-</body>
 
-</html>
 
 
 
