Added Blog Reading Page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Asperia</title>
 
-  <!-- 
-    - favicon
-  -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="25x25" href="Assets/images/logo.png">
 
   <!-- 
     - google font link
@@ -29,9 +27,9 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+  <!-- <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/pattern-2.svg">
-  <link rel="preload" as="image" href="./assets/images/pattern-3.svg">
+  <link rel="preload" as="image" href="./assets/images/pattern-3.svg"> -->
 
 </head>
 
@@ -1505,9 +1503,9 @@
 
         <div class="footer-bottom">
 
-          <!-- <p class="copyright">
-            &copy; Developed by <a href="#" class="copyright-link">codewithsadee.</a>
-          </p> -->
+          <p class="copyright">
+            &copy; Developed with ❤️ by <a href="#" class="copyright-link">Asperians</a>
+          </p>
 
           <ul class="social-list">
 
