--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asperia</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="25x25" href="Assets/images/logo.png">
     <!------ css link ------>
     <link rel="stylesheet" href="./css/login.css">
     <!-------- fonts for login page -------->
