--- a/profile.html
+++ b/profile.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asperia</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="25x25" href="Assets/images/logo.png">
 
     <!--
     - custom css link
-  -->
+    -->
     <link rel="stylesheet" href="./css/profile.css">
+    
 
     <!--
     - google font link
-  -->
+    -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800&display=swap"
@@ -23,14 +26,16 @@
 
 <body>
 
+
+
     <!--
     - #MAIN
-  -->
+    -->
 
     <main>
 
-        <!--
-      - #SIDEBAR
+    <!--
+    - #SIDEBAR
     -->
 
         <aside class="sidebar" data-sidebar>
@@ -146,15 +151,15 @@
 
         </aside>
 
-        <!--
-      - #main-content
+    <!--
+    - #main-content
     -->
 
         <div class="main-content">
 
-            <!--
-        - #NAVBAR
-      -->
+    <!--
+    - #NAVBAR
+    -->
 
             <nav class="navbar">
 
@@ -180,9 +185,9 @@
 
 
 
-            <!--
-        - #ABOUT
-      -->
+    <!--
+    - #ABOUT
+    -->
 
             <article class="about  active" data-page="about">
 
@@ -207,9 +212,9 @@
                 </section>
 
 
-                <!--
-          - service
-        -->
+    <!--
+    - service
+    -->
 
                 <section class="service">
 
@@ -996,12 +1001,12 @@
 
     <!--
     - custom js link
-  -->
+    -->
     <script src="./profile.js"></script>
 
     <!--
     - ionicon link
-  -->
+    -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
