Made changes to blog page

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                   </div>
 
                   <h3 class="headline headline-3">
-                    <a href="#" class="card-title hover-2">
+                    <a href="blog.html" class="card-title hover-2">
                       Self-observation is the first step of inner unfolding
                     </a>
                   </h3>
@@ -510,7 +510,7 @@
                   </div>
 
                   <h3 class="headline headline-3">
-                    <a href="#" class="card-title hover-2">
+                    <a href="blog.html" class="card-title hover-2">
                       Self-observation is the first step of inner unfolding
                     </a>
                   </h3>
@@ -562,7 +562,7 @@
                   </div>
 
                   <h3 class="headline headline-3">
-                    <a href="#" class="card-title hover-2">
+                    <a href="blog.html" class="card-title hover-2">
                       Self-observation is the first step of inner unfolding
                     </a>
                   </h3>
@@ -614,7 +614,7 @@
                   </div>
 
                   <h3 class="headline headline-3">
-                    <a href="#" class="card-title hover-2">
+                    <a href="blog.html" class="card-title hover-2">
                       Self-observation is the first step of inner unfolding
                     </a>
                   </h3>
@@ -666,7 +666,7 @@
                   </div>
 
                   <h3 class="headline headline-3">
-                    <a href="#" class="card-title hover-2">
+                    <a href="blog.html" class="card-title hover-2">
                       Self-observation is the first step of inner unfolding
                     </a>
                   </h3>
@@ -718,7 +718,7 @@
       <section class="tags" aria-labelledby="tag-label">
         <div class="container">
 
-          <h2 class="headline headline-2 section-title" id="tag-label">
+          <h2 class="headline headline-2 section-title" id="categories">
             <span class="span">Categories</span>
           </h2>
 
