signin authentication done, and profile responsive

--- a/profile.html
+++ b/profile.html
@@ -91,12 +91,12 @@
                     <li class="contact-item">
 
                         <div class="icon-box">
-                            <ion-icon name="calendar-outline"></ion-icon>
+                            <ion-icon name="accessibility-outline"></ion-icon>
                         </div>
 
                         <div class="input-box">
-                            <label>Date Of Birth</label>
-                            <input type="date" id="birthday" name="birthday">
+                            <label>Gender</label>
+                            <input type="text" id="gender" name="gender">
                         </div>
 
                     </li>
