--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
               <div class="card feature-card">
 
                 <figure class="card-banner img-holder" style="--width: 1602; --height: 903;">
-                  <img src="./assets/images/featured-5.png" width="1602" height="903" loading="lazy"
+                  <img src="Assets/images/featured-5.png" width="1602" height="903" loading="lazy"
                     alt="Self-observation is the first step of inner unfolding" class="img-cover">
                 </figure>
 
@@ -702,9 +702,6 @@
           </a>
 
         </div>
-
-        <!-- <img src="./assets/images/shadow-3.svg" width="500" height="1500" loading="lazy" alt="" class="feature-bg"> -->
-
       </section>
 
 
