--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <!-- Remix icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- Custom styles -->
-    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     <div class="container">
     
         <a href="index.html" class="logo">
-        <img src="assets/images/logo.png" width="30" height="10" alt="logo">
+        <img src="Assets/images/logo.png" width="30" height="10" alt="logo">
         </a>
     
         <nav class="navbar" data-navbar>
