--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/carousel.css">
 
-  <!-- 
-    - preload images
-  -->
-  <!-- <link rel="preload" as="image" href="Assets/images/hero-banner.png">
-  <link rel="preload" as="image" href="Assets/images/pattern-2.svg">
-  <link rel="preload" as="image" href="Assets/images/pattern-3.svg"> -->
-
 </head>
 
 <body id="top">
@@ -73,12 +66,8 @@
           </li>
 
           <li>
-            <a href="#recent" class="navbar-link hover-1" data-nav-toggler>Write a Blog</a>
+            <a href="profile.html" class="navbar-link hover-1" data-nav-toggler>Profile</a>
           </li>
-
-          <!-- <li>
-            <a href="#" class="navbar-link hover-1" data-nav-toggler>Contact</a>
-          </li> -->
 
         </ul>
 
@@ -86,14 +75,6 @@
 
           <div class="profile-card">
             <img src="Assets/images/author-1.png" width="48" height="48" alt="Steven" class="profile-banner">
-
-            <!-- <div>
-              <p class="card-title">Hello Steven !</p>
-
-              <p class="card-subtitle">
-                You have 3 new messages
-              </p>
-            </div> -->
           </div>
 
           <ul class="link-list">
@@ -129,7 +110,6 @@
       </nav>
 
       <a href="login.html" class="btn btn-primary">Login</a>
-      <!-- <a href="#" class="btn btn-primary">Sign Up</a> -->
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
