--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
             <div class="sidebar-info">
 
                 <figure class="avatar-box">
-                    <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+                    <img src="Assets/images/my-avatar.png" alt="Richard hanrick" width="80">
                 </figure>
 
                 <div class="info-content">
@@ -225,7 +225,7 @@
                         <li class="service-item">
 
                             <div class="service-icon-box">
-                                <img src="./assets/images/icon-design.png" alt="design icon" width="40">
+                                <img src="Assets/images/icon-design.png" alt="design icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -241,7 +241,7 @@
                         <li class="service-item">
 
                             <div class="service-icon-box">
-                                <img src="./assets/images/icon-dev.png" alt="Web development icon" width="40">
+                                <img src="Assets/images/icon-dev.png" alt="Web development icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -257,7 +257,7 @@
                         <li class="service-item">
 
                             <div class="service-icon-box">
-                                <img src="./assets/images/icon-app.png" alt="mobile app icon" width="40">
+                                <img src="Assets/images/icon-app.png" alt="mobile app icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -273,7 +273,7 @@
                         <li class="service-item">
 
                             <div class="service-icon-box">
-                                <img src="./assets/images/icon-photo.png" alt="camera icon" width="40">
+                                <img src="Assets/images/icon-photo.png" alt="camera icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -305,7 +305,7 @@
                             <div class="content-card" data-testimonials-item>
 
                                 <figure class="testimonials-avatar-box">
-                                    <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60"
+                                    <img src="Assets/images/avatar-1.png" alt="Daniel lewis" width="60"
                                         data-testimonials-avatar>
                                 </figure>
 
@@ -330,7 +330,7 @@
                             <div class="content-card" data-testimonials-item>
 
                                 <figure class="testimonials-avatar-box">
-                                    <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60"
+                                    <img src="Assets/images/avatar-2.png" alt="Jessica miller" width="60"
                                         data-testimonials-avatar>
                                 </figure>
 
@@ -355,7 +355,7 @@
                             <div class="content-card" data-testimonials-item>
 
                                 <figure class="testimonials-avatar-box">
-                                    <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60"
+                                    <img src="Assets/images/avatar-3.png" alt="Emily evans" width="60"
                                         data-testimonials-avatar>
                                 </figure>
 
@@ -380,7 +380,7 @@
                             <div class="content-card" data-testimonials-item>
 
                                 <figure class="testimonials-avatar-box">
-                                    <img src="./assets/images/avatar-4.png" alt="Henry william" width="60"
+                                    <img src="Assets/images/avatar-4.png" alt="Henry william" width="60"
                                         data-testimonials-avatar>
                                 </figure>
 
@@ -422,10 +422,10 @@
 
                         <div class="modal-img-wrapper">
                             <figure class="modal-avatar-box">
-                                <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
+                                <img src="Assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
                             </figure>
 
-                            <img src="./assets/images/icon-quote.svg" alt="quote icon">
+                            <img src="Assets/images/icon-quote.svg" alt="quote icon">
                         </div>
 
                         <div class="modal-content">
@@ -465,37 +465,37 @@
 
                         <li class="clients-item">
                             <a href="#">
-                                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                                <img src="Assets/images/logo-1-color.png" alt="client logo">
                             </a>
                         </li>
 
                         <li class="clients-item">
                             <a href="#">
-                                <img src="./assets/images/logo-2-color.png" alt="client logo">
+                                <img src="Assets/images/logo-2-color.png" alt="client logo">
                             </a>
                         </li>
 
                         <li class="clients-item">
                             <a href="#">
-                                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                                <img src="Assets/images/logo-3-color.png" alt="client logo">
                             </a>
                         </li>
 
                         <li class="clients-item">
                             <a href="#">
-                                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                                <img src="Assets/images/logo-4-color.png" alt="client logo">
                             </a>
                         </li>
 
                         <li class="clients-item">
                             <a href="#">
-                                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                                <img src="Assets/images/logo-5-color.png" alt="client logo">
                             </a>
                         </li>
 
                         <li class="clients-item">
                             <a href="#">
-                                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                                <img src="Assets/images/logo-6-color.png" alt="client logo">
                             </a>
                         </li>
 
@@ -581,7 +581,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                                    <img src="Assets/images/project-1.jpg" alt="finance" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Finance</h3>
@@ -599,7 +599,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                                    <img src="Assets/images/project-2.png" alt="orizon" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Orizon</h3>
@@ -617,7 +617,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                                    <img src="Assets/images/project-3.jpg" alt="fundo" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Fundo</h3>
@@ -635,7 +635,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                                    <img src="Assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Brawlhalla</h3>
@@ -653,7 +653,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                                    <img src="Assets/images/project-5.png" alt="dsm." loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">DSM.</h3>
@@ -671,7 +671,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                                    <img src="Assets/images/project-6.png" alt="metaspark" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">MetaSpark</h3>
@@ -689,7 +689,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                                    <img src="Assets/images/project-7.png" alt="summary" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Summary</h3>
@@ -707,7 +707,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                                    <img src="Assets/images/project-8.jpg" alt="task manager" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Task Manager</h3>
@@ -725,7 +725,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                                    <img src="Assets/images/project-9.png" alt="arrival" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">Arrival</h3>
@@ -763,7 +763,7 @@
                             <a href="#">
 
                                 <figure class="blog-banner-box">
-                                    <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022"
+                                    <img src="Assets/images/blog-1.jpg" alt="Design conferences in 2022"
                                         loading="lazy">
                                 </figure>
 
@@ -792,7 +792,7 @@
                             <a href="#">
 
                                 <figure class="blog-banner-box">
-                                    <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer"
+                                    <img src="Assets/images/blog-2.jpg" alt="Best fonts every designer"
                                         loading="lazy">
                                 </figure>
 
@@ -821,7 +821,7 @@
                             <a href="#">
 
                                 <figure class="blog-banner-box">
-                                    <img src="./assets/images/blog-3.jpg" alt="Design digest #80" loading="lazy">
+                                    <img src="Assets/images/blog-3.jpg" alt="Design digest #80" loading="lazy">
                                 </figure>
 
                                 <div class="blog-content">
@@ -850,7 +850,7 @@
                             <a href="#">
 
                                 <figure class="blog-banner-box">
-                                    <img src="./assets/images/blog-4.jpg" alt="UI interactions of the week"
+                                    <img src="Assets/images/blog-4.jpg" alt="UI interactions of the week"
                                         loading="lazy">
                                 </figure>
 
@@ -880,7 +880,7 @@
                             <a href="#">
 
                                 <figure class="blog-banner-box">
-                                    <img src="./assets/images/blog-5.jpg" alt="The forgotten art of spacing"
+                                    <img src="Assets/images/blog-5.jpg" alt="The forgotten art of spacing"
                                         loading="lazy">
                                 </figure>
 
@@ -910,7 +910,7 @@
                             <a href="#">
 
                                 <figure class="blog-banner-box">
-                                    <img src="./assets/images/blog-6.jpg" alt="Design digest #79" loading="lazy">
+                                    <img src="Assets/images/blog-6.jpg" alt="Design digest #79" loading="lazy">
                                 </figure>
 
                                 <div class="blog-content">
